[package]
name = "lila-socket"
version = "0.1.0"
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
edition = "2018"

[dependencies]
cookie = "0.12.0"
mongodb = "0.3.12"
serde_urlencoded = "0.5.5"
serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.40"
ws = "0.8.1"
mio-extras = "2.0.5"
redis = "0.10.0"
crossbeam = "0.7.1"
