[package]
name = "lila-websocket"
version = "0.1.0"
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
edition = "2018"

[dependencies]
cookie = "0.12"
mongodb = "0.3"
serde_urlencoded = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ws = "0.8"
mio-extras = "2.0"
redis = "0.10"
crossbeam = "0.7"
log = "0.4"
env_logger = "0.6"
bson = "0.13"
once_cell = "0.2.1"
structopt = "0.2.18"
